View ingredient. added tests.