@@ -21,7 +21,7 @@ public class RecipeController {
     @GetMapping("/{id}/show")
     public String showById(@PathVariable String id, Model model) {
         log.info("In method showById with id : " + id);
-        model.addAttribute("recipe", recipeService.findById(new Long(id)));
+        model.addAttribute("recipe", recipeService.findById(Long.valueOf(id)));
         return "recipe/show";
     }
 
